--- a/assets/shared/styles/controls.css
+++ b/assets/shared/styles/controls.css
@@ -71,7 +71,9 @@ table.row-display a:active {
 	display: inline-block;
   font-size: .875rem;
 }
-
+.pageMenu a {
+  margin-right: .75rem;
+}
 /* BUTTONS --> */
 
 /* AIS only*/
